# dirt

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
candidates/: std_string  stdlib
rules/: std_string.lua  stdlib.lua  utils.lua
src/: dirt_engine.rs  lib.rs  main.rs  utils.rs
src/emu/: args.rs  calling_convention.rs  datatypes.rs  debugger.rs  emu_engine.rs  mod.rs  object_info.rs  vmstate.rs
src/emu/env/: linux.rs  mod.rs
src/emu/loader/: elf.rs  mod.rs
src/rules/: lua.rs  mod.rs  rule.rs  ruleset.rs  target_rules.rs
tests/: bin_file.rs  candidates_tests.rs
tests/candidates/: Makefile  std_string.cpp  stdlib.c  string.cpp
tests/integrations/: bin1
travis/: capstone.sh  install_unicorn.sh  unicorn.sh
